--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,41 @@
 #
 #    pip-compile requirements.ini
 #
+blis==0.7.8
+    # via thinc
+catalogue==2.0.8
+    # via
+    #   spacy
+    #   srsly
+    #   thinc
 certifi==2022.6.15
     # via requests
 charset-normalizer==2.0.12
     # via requests
 click==8.0.4
-    # via sacremoses
+    # via
+    #   sacremoses
+    #   typer
 configparser==5.2.0
     # via -r requirements.ini
+contextvars==2.4
+    # via thinc
 cycler==0.11.0
     # via matplotlib
+cymem==2.0.6
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 dataclasses==0.8
     # via
+    #   pathy
+    #   pydantic
+    #   thinc
     #   torch
     #   transformers
+decorator==4.4.2
+    # via networkx
 filelock==3.4.1
     # via
     #   huggingface-hub
@@ -26,39 +47,69 @@ huggingface-hub==0.4.0
     # via transformers
 idna==3.3
     # via requests
+immutables==0.18
+    # via contextvars
 importlib-metadata==4.8.3
     # via
+    #   click
     #   huggingface-hub
     #   transformers
 importlib-resources==5.4.0
     # via tqdm
+jinja2==3.0.3
+    # via spacy
 joblib==1.1.0
     # via
     #   sacremoses
     #   scikit-learn
 kiwisolver==1.3.1
     # via matplotlib
+langcodes==3.3.0
+    # via spacy
+markupsafe==2.0.1
+    # via jinja2
 matplotlib==3.3.4
     # via seaborn
+murmurhash==1.0.7
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
+networkx==2.5.1
+    # via -r requirements.ini
 numpy==1.19.5
     # via
     #   -r requirements.ini
+    #   blis
     #   matplotlib
     #   pandas
     #   scikit-learn
     #   scipy
     #   seaborn
+    #   spacy
+    #   thinc
     #   transformers
 packaging==21.3
     # via
     #   huggingface-hub
+    #   spacy
     #   transformers
 pandas==1.1.5
     # via
     #   -r requirements.ini
     #   seaborn
+pathy==0.6.2
+    # via spacy
 pillow==8.4.0
     # via matplotlib
+preshed==3.0.6
+    # via
+    #   spacy
+    #   thinc
+pydantic==1.9.1
+    # via
+    #   spacy
+    #   thinc
 pyparsing==3.0.9
     # via
     #   matplotlib
@@ -80,6 +131,7 @@ regex==2022.7.25
 requests==2.27.1
     # via
     #   huggingface-hub
+    #   spacy
     #   transformers
 sacremoses==0.0.53
     # via transformers
@@ -97,6 +149,20 @@ six==1.16.0
     # via
     #   python-dateutil
     #   sacremoses
+smart-open==5.2.1
+    # via pathy
+spacy==3.4.1
+    # via -r requirements.ini
+spacy-legacy==3.0.9
+    # via spacy
+spacy-loggers==1.0.3
+    # via spacy
+srsly==2.4.4
+    # via
+    #   spacy
+    #   thinc
+thinc==8.1.0
+    # via spacy
 threadpoolctl==3.1.0
     # via scikit-learn
 tokenizers==0.12.1
@@ -108,17 +174,35 @@ tqdm==4.64.0
     #   -r requirements.ini
     #   huggingface-hub
     #   sacremoses
+    #   spacy
     #   transformers
 transformers==4.18.0
     # via -r requirements.ini
+typer==0.4.2
+    # via
+    #   pathy
+    #   spacy
 typing-extensions==4.1.1
     # via
+    #   catalogue
     #   huggingface-hub
     #   importlib-metadata
+    #   pydantic
+    #   spacy
+    #   thinc
     #   torch
 urllib3==1.26.11
     # via requests
+wasabi==0.10.1
+    # via
+    #   spacy
+    #   spacy-loggers
+    #   thinc
 zipp==3.6.0
     # via
+    #   catalogue
     #   importlib-metadata
     #   importlib-resources
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
