--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,10 +1,12 @@
 [Meta]
 task_name = srl
-dataset_name = wiki
+#dataset_name = wiki
+dataset_name = qasrl2
 
 [Data]
 data_dir = ./../data/
-data_file = wiki1.train.qa
+#data_file = wiki1.train.qa
+data_file = qasrl-v2/orig/dev.jsonl
 
 [Run]
 mode = predict
