--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.ini
 #
+attrs==22.1.0
+    # via jsonlines
 blis==0.7.8
     # via thinc
 catalogue==2.0.8
@@ -62,6 +64,8 @@ joblib==1.1.0
     # via
     #   sacremoses
     #   scikit-learn
+jsonlines==3.1.0
+    # via -r requirements.ini
 kiwisolver==1.3.1
     # via matplotlib
 langcodes==3.3.0
@@ -187,6 +191,7 @@ typing-extensions==4.1.1
     #   catalogue
     #   huggingface-hub
     #   importlib-metadata
+    #   jsonlines
     #   pydantic
     #   spacy
     #   thinc
