Coref preprocessing added

--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,12 +1,10 @@
 [Meta]
-task_name = srl
-#dataset_name = wiki
-dataset_name = qasrl2
+task_name = coref
+dataset_name = ecbplus
 
 [Data]
 data_dir = ./../data/
-#data_file = wiki1.train.qa
-data_file = qasrl-v2/orig/dev.jsonl
+data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
 
 [Run]
 mode = predict
