--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -5,12 +5,14 @@ dataset_name = ecbplus
 [Data]
 data_dir = ./../data/
 data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
+#data_file = wiki1.train.qa
 
 [Run]
 mode = predict
 
 [Model]
-model = t5
+#model = t5
+model = t5-3b
 
 [Prompt]
 prompt_type = discrete
