--- a/src/config.ini
+++ b/src/config.ini
@@ -1,16 +1,16 @@
 [Meta]
-task_name = srl
+#task_name = srl
 #dataset_name = qasrl2
-dataset_name = wiki
-#task_name = coref
-#dataset_name = ecbplus
+#dataset_name = wiki
+task_name = coref
+dataset_name = ecbplus
 #ontonotes
 
 [Data]
 data_dir = ./../data/
 #data_file = conll-2012/v12/data/development/data/english/annotations/
-#data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
-data_file = wiki1.train.qa
+data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
+#data_file = wiki1.train.qa
 #data_file = qasrl-v2/orig/dev.jsonl
 
 [Run]
@@ -23,5 +23,10 @@ model = t5-3b
 
 [Prompt]
 prompt_type = discrete
-prompt_style = mcq
+prompt_style = qa
 context_style = None
+
+[Dumps]
+dump_spec = ""
+read_spec = ""
+
