--- a/src/config.ini
+++ b/src/config.ini
@@ -3,13 +3,13 @@
 #dataset_name = qasrl2
 #dataset_name = wiki
 task_name = coref
-dataset_name = ecbplus
-#ontonotes
+#dataset_name = ecbplus
+dataset_name = ontonotes
 
 [Data]
 data_dir = ./../data/
-#data_file = conll-2012/v12/data/development/data/english/annotations/
-data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
+data_file = conll-2012/v12/data/development/data/english/annotations/
+#data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/dev_entities_corpus_level.conll
 #data_file = wiki1.train.qa
 #data_file = qasrl-v2/orig/dev.jsonl
 
@@ -18,15 +18,30 @@ mode = predict
 
 [Model]
 #model = t5
-model = t5-3b
-#model = macaw-3b
+#model = t5-3b
+model = macaw-3b
 
 [Prompt]
 prompt_type = discrete
-prompt_style = qa
-context_style = None
+#prompt_style = qa
+prompt_style = mcq
+context_style = highlight
+
+[Inference]
+#score_type = raw
+score_type = prob
+
+[Calibration]
+do_calibrate = False
+calibration_type = pmi
+#calibration_type = score_diff
+#calibration_type = calib_before_use
 
 [Dumps]
-dump_spec = ""
-read_spec = ""
+dump_spec = _window2_prob_highlight
+#window2_prob
+#"calib_prob"
+read_spec = window2_prob_highlight
+#window2_prob
+#"calib_prob"
 
