--- a/config_files/config_ace.ini
+++ b/config_files/config_ace.ini
@@ -4,7 +4,7 @@ dataset_name = ace
 
 [Data]
 data_dir = ./../data/
-data_file = ace_dev_filtered.jsonl
+data_file = ace_dev.jsonl
 
 [Run]
 mode = predict
