--- a/config_files/config_ace.ini
+++ b/config_files/config_ace.ini
@@ -4,7 +4,7 @@ dataset_name = ace
 
 [Data]
 data_dir = ./../data/
-data_file = 99_ACE.tsv
+data_file = ace_dev_filtered_by_pred_arg.jsonl
 
 [Run]
 mode = predict
