--- a/config_files/test_config.ini
+++ b/config_files/test_config.ini
@@ -14,7 +14,7 @@ data_file = qasrl-v2/orig/test.jsonl
 #data_file = conll-2012/v12/data/test/data/english/annotations/
 #data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/test_entities_corpus_level.conll
 #data_file = GENIA_MedCo_coreference_corpus_1.0/test/
-#few_shot_file = wiki1.train.qa
+few_shot_file = wiki1.train.qa
 
 [Run]
 mode = predict
