--- a/config_files/test_config.ini
+++ b/config_files/test_config.ini
@@ -1,17 +1,17 @@
 [Meta]
-task_name = srl
+#task_name = srl
 #dataset_name = wiki
-dataset_name = qasrl2
-#task_name = coref
+#dataset_name = qasrl2
+task_name = coref
 #dataset_name = ecbplus
-#dataset_name = ontonotes
+dataset_name = ontonotes
 #dataset_name = genia
 
 [Data]
 data_dir = ./../data/
 #data_file = wiki1.test.qa
-data_file = qasrl-v2/orig/test.jsonl
-#data_file = conll-2012/v12/data/test/data/english/annotations/
+#data_file = qasrl-v2/orig/test.jsonl
+data_file = conll-2012/v12/data/test/data/english/annotations/
 #data_file = awesomecoref/processed_ecb/data/ecb/gold_singletons/test_entities_corpus_level.conll
 #data_file = GENIA_MedCo_coreference_corpus_1.0/test/
 few_shot_file = wiki1.train.qa
