--- a/config_files/test_config.ini
+++ b/config_files/test_config.ini
@@ -33,8 +33,8 @@ model = t5-11b
 
 [Prompt]
 prompt_type = discrete
-prompt_style = qa
-#prompt_style = mcq
+#prompt_style = qa
+prompt_style = mcq
 context_style = None
 
 [Inference]
