--- a/config_files/test_config.ini
+++ b/config_files/test_config.ini
@@ -28,8 +28,8 @@ order_num = 1
 
 
 [Model]
-model = t5-11b
-#model = macaw-11b
+#model = t5-11b
+model = macaw-11b
 
 [Prompt]
 prompt_type = discrete
