--- a/config_files/config_ace.ini
+++ b/config_files/config_ace.ini
@@ -4,7 +4,7 @@ dataset_name = ace
 
 [Data]
 data_dir = ./../data/
-data_file = 99_ACE.tsv
+data_file = test.event.json
 
 [Run]
 mode = predict
@@ -19,5 +19,5 @@ context_style = None
 
 
 [Dumps]
-dump_spec = ""
-read_spec = ""
+dump_spec = acevero
+read_spec = acevero
