--- a/config_files/config_ace_flan.ini
+++ b/config_files/config_ace_flan.ini
@@ -19,5 +19,5 @@ context_style = None
 
 
 [Dumps]
-dump_spec = aceveroflan
-read_spec = aceveroflan
+dump_spec = aceveroflannonull
+read_spec = aceveroflannonull
