--- a/config_files/config_ace_types.ini
+++ b/config_files/config_ace_types.ini
@@ -4,7 +4,7 @@ dataset_name = ace_types
 
 [Data]
 data_dir = ./../data/
-data_file = readable_argument_preds_improved.tsv
+data_file = readable_argument_preds_veronica_for_types.tsv
 
 [Run]
 mode = predict
@@ -19,5 +19,5 @@ context_style = None
 
 
 [Dumps]
-dump_spec = ace_types
-read_spec = ace_types
+dump_spec = ace_types_vero
+read_spec = ace_types_vero
